fix: spacing for my laptop

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -24,15 +24,15 @@
 
 .date {
   text-align: center;
-  margin-left: 625px;
+  margin-left: 520px;
 }
 
 .times {
   text-align: right;
-  margin-right: 0px;
+  margin-right: 30px;
 }
 .units {
-  color: #CF4D6F;
+  color: #cf4d6f;
   font-size: 30px;
 }
 
@@ -79,7 +79,6 @@
   width: 75px;
   height: 75px;
 }
-
 
 /*SIDES*/
 .menu .sides {
